--- a/app/components/Custom/style.css
+++ b/app/components/Custom/style.css
@@ -9291,6 +9291,18 @@ h3, .h3 {
         padding: 330px 0 90px 0;
     }
 }
+
+@media screen and (min-width: 1600px) {
+    .portfolio-container {
+        padding: 440px 0 90px 0;
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    .portfolio-container {
+        padding: 500px 0 90px 0;
+    }
+}
   .portfolio-container .portfolio-wraper {
     display: -webkit-box;
     display: -webkit-flex;
